# packcc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  packcc.c
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml  testing.yml
benchmark/: benchmark.sh
benchmark/grammars/: calc.peg
examples/: README.md  ast-calc.peg  ast-calc.v3.peg  calc.peg
examples/ast-tinyc/: CMakeLists.txt  README.md  main.c
import/: README.md
import/char/: README.md  ascii_character_group.peg  unicode_derived_core.peg  unicode_general_category.peg
import/code/: README.md  pcc_ast.md  pcc_ast.peg  pcc_ast.v3.md  pcc_ast.v3.peg
import/util/: README.md  eol.md  eol.peg  tab.md  tab.peg
misc/: README.md  unicode_derived_core.py  unicode_general_category.py
src/: packcc.c  value.h
src/examples/: calc.peg
src/examples/ast-tinyc/: CMakeLists.txt  system.c
tests/: .gitignore  README.md  calc.bats  calc.expected.c  calc.expected.h  main.c  test.sh  utils.bash  utils.sh
tests/ascii.d/: ascii.bats
tests/ast-calc.d/: ast-calc.bats
tests/ast-calc.v3.d/: ast-calc.bats  expected.txt  input.txt
tests/benchmark/: .gitignore  benchmark.sh  test.peg
tests/blank_lines.d/: input.peg  lines.bats
tests/calc.d/: calc.bats
tests/captures.d/: expected.txt  input.peg  input.txt
tests/character_classes.d/: expected-utf8.txt
tests/character_classes_0.d/: expected.txt  input.peg  input.txt
tests/character_classes_1.d/: input.peg
tests/code_generation.d/: generation.bats  input.peg  main.c
tests/code_indentation.d/: code.bats  expected.c.txt  input.peg
tests/code_line_continuation.d/: .gitattributes  dump.bats  expected.txt  input.peg
tests/debug_macro.d/: expected.txt  input.peg
tests/dump.d/: dump.bats
tests/empty_peg.d/: empty.bats  empty_peg.bats
tests/empty_string.d/: empty.bats  empty_string.bats  input.peg
tests/import.d/: .gitattributes  .gitignore  check_line_number.py  import.bats  make_input.py  reference.peg  template.peg
tests/import_char.d/: check.bats  import_char.bats  input.peg
tests/import_version_check.d/: check.bats  error.peg  error_0.peg  error_expected.txt  import_0.peg  import_1.peg  input.peg
tests/invalid_identifier_mvar.d/: input.peg  mvar.bats
tests/invalid_identifier_rvar.d/: input.peg  rvar.bats
tests/issue_28.d/: expected.txt  input.peg
tests/issue_78.d/: input.peg  issue_78.bats
tests/issue_96.d/: expected.txt  input.peg  input.txt
tests/issue_99.d/: input.peg  issue_99.bats
tests/lines.d/: lines.bats
tests/marker_variable_string.d/: expected.txt  input.peg  input.txt
tests/null.d/: .gitignore  expected.txt  input.peg  input.txt  null.bats
tests/option_substitution.d/: .gitignore  expected_0.c.txt  expected_0.h.txt  expected_1.c.txt  expected_1.h.txt  expected_2.c.txt  expected_2.h.txt  input.peg  subst.bats
tests/packcc_version_check.d/: error.peg  error_0.peg  error_expected.txt  import_0.peg  import_1.peg  input.peg
tests/position.d/: expected.txt  input.peg  input.txt
tests/programmable_predicate.d/: expected.txt  input.peg  input.txt
tests/strings.d/: expected-escapes.txt  input-escapes.txt  input.peg
tests/style.d/: style.bats
tests/substitution.d/: error_expected.txt  expected.c  expected.c.txt  expected.h  expected.h.txt  input.peg  subst.bats
tests/unused_functions.d/: check.bats  test1.peg  test2.peg
tests/unused_rule_elimination.d/: dump.bats  expected.txt  input.peg
tests/util_eol.d/: expected.txt  input.peg  input.txt
tests/util_tab.d/: expected.txt  input.peg  input.txt
tests/version_substitution.d/: expected.c.txt  expected.h.txt  import_0.peg  import_1.peg  input.peg  subst.bats
